--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemailer": "^6.9.1"
+    "force": "^0.0.3",
+    "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.22"
   }
 }
